# uipath-reimbursement-maestro

./: .gitignore  LICENSE  README.md
IntakeAndExtraction/: README.md
IntakeAndExtraction/ReceiptExtractor/: bindings_v2.json  entry-points.json  operate.json  project.json  project.uiproj
IntakeForm/: .env.example  api.py  index.html  package-lock.json  package.json  requirements.txt  vite.config.ts
IntakeForm/src/: App.css  App.tsx  IntakeForm.css  IntakeForm.tsx  index.css
MaestroCase/_unpacked/: ReimbursementProcessMaestro.caseManagement.ReimbursementProcessCase.nuspec
NotificationAgent/: agent.mermaid  entry-points.json  main.py  project.uiproj
PolicyRuleCheckWorkflow/: README.md  project.uiproj
RazorpayPayoutWorkflow/: README.md  RazorpayPayoutWorkflow.json  project.uiproj
ReimbursementApiSolution/: ReimbursementApiSolution.uipx
ReimbursementApiSolution/NotificationAgent/: README.md  main.mermaid  pyproject.toml
ReimbursementClassificationAgent/: agent.mermaid  entry-points.json  project.uiproj  pyproject.toml
ReimbursementClassificationAgent/evaluations/eval-sets/: edge-cases.json  smoke-test.json
ReimbursementClassificationAgent/evaluations/evaluators/: json-similarity.json
RejectionNotificationAgent/: main.py  project.uiproj  pyproject.toml
SAPConcurPaymentWorkflow/: README.md  SAPConcurPaymentWorkflow.json
StripePayoutWorkflow/: entry-points.json
classification-approval-app/: action-schema.json  index.html  package-lock.json  package.json
classification-approval-app/src/: App.tsx
data/: case_schema.json  mock_policy.json
(+35 files in other folders)
