[project]
name = "ReimbursementClassificationAgent"
version = "0.0.3"
description = "AgentHack Track 1 - Stage 3 Reimbursement Classification External Agent (expense type, business purpose, risk scoring)"
authors = [{ name = "Subharjun" }]
dependencies = [
    "uipath-langchain>=0.10.0, <0.11.0",
]
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "uipath-dev>=0.0.79",
]
